Elimination of text-overlap issue in audio

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/clix-activity-styles.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/clix-activity-styles.css
@@ -209,7 +209,6 @@
 #scstyle audio {
   margin: 10px auto;
   /*width: 100%;*/
-  display: block;
 }
 
 
